modified:   index.html

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                         </div>
                         <div class="unit-body">
                           <a class="link-white d-inline" href="#"
-                            >#224, 4310, 104 Avenue NE<br /> Calgary, AB, T3N 1W2</a
+                            >#2224, 4310 - 104 Avenue NE<br /> Calgary, AB, T3N 1W2</a
                           >
                         </div>
                       </div>
